[project]
name = "mcp-integration-openaisdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Taha Nadeem Khan", email = "tahak6884@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agent>=0.1.3",
    "mcp>=1.6.0",
    "openai>=1.70.0",
    "openai-agents>=0.0.9",
    "openai-agents-mcp>=0.0.8",
    "pandas>=2.2.3",
    "sdk>=1.0.0",
]

[project.scripts]
mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
